@@ -1,2 +1,1 @@
 .xvpics
-er.ps
