@@ -1,20 +1,20 @@
 %!PS-Adobe-2.0
-%%Title: er.ps
-%%Creator: /usr/X11R6/bin/fig2dev Version 3.2 Patchlevel 4
-%%CreationDate: Sun Aug 21 02:33:22 2005
-%%For: scott@seamonkey (,,,)
+%%Title: er.fig
+%%Creator: fig2dev Version 3.2 Patchlevel 5-alpha7
+%%CreationDate: Mon Aug 28 16:13:49 2006
+%%For: tews@tandem (Hendrik Tews,,,)
 %%Orientation: Landscape
 %%Pages: 1
 %%BoundingBox: 0 0 612 792
 %%DocumentPaperSizes: letter
 %%BeginSetup
 [{
-%BeginFeature: *PageRegion Letter
+%%BeginFeature: *PageRegion Letter
 <</PageSize [612 792]>> setpagedevice
-%EndFeature
+%%EndFeature
 } stopped cleartomark
 %%EndSetup
-%%Magnification: 1.0000
+%Magnification: 1.0000
 %%EndComments
 /$F2psDict 200 dict def
 $F2psDict begin
@@ -52,14 +52,14 @@ $F2psDict /mtrx matrix put
 /col29 {1.000 0.750 0.750 srgb} bind def
 /col30 {1.000 0.880 0.880 srgb} bind def
 /col31 {1.000 0.840 0.000 srgb} bind def
-/col32 {0.000 0.539 0.578 srgb} bind def
-/col33 {0.449 0.234 0.773 srgb} bind def
-/col34 {0.387 0.473 0.609 srgb} bind def
+/col32 {0.000 0.541 0.580 srgb} bind def
+/col33 {0.451 0.235 0.776 srgb} bind def
+/col34 {0.388 0.475 0.612 srgb} bind def
 
 end
 save
 newpath 0 792 moveto 0 0 lineto 612 0 lineto 612 792 lineto closepath clip newpath
-0.0 0.0 translate
+0.0 0.5 translate
 
 /cp {closepath} bind def
 /ef {eofill} bind def
@@ -124,63 +124,59 @@ $F2psBegin
 % here starts figure with depth 50
 % Ellipse
 7.500 slw
-n 1800 9450 600 150 0 360 DrawEllipse gs col-1 s gr
-
-/Times-Roman ff 180.00 scf sf
-1800 9525 m
-gs 1 -1 sc (type: Type) dup sw pop 2 div neg 0 rm  col-1 sh gr
-% Ellipse
 n 4800 7650 900 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 4800 7725 m
 gs 1 -1 sc (type: DataType) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Ellipse
 n 4500 4200 600 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 4500 4275 m
 gs 1 -1 sc (value: int) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Ellipse
 n 4800 4500 900 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 4800 4575 m
 gs 1 -1 sc (type: Enumeration) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Ellipse
 n 12300 2850 300 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12300 2925 m
 gs 1 -1 sc (cv) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Polyline
+0 slj
+0 slc
 n 600 2100 m 1800 2100 l 1800 2400 l 600 2400 l
  cp gs col12 s gr 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1200 2325 m
 gs 1 -1 sc (Scope) dup sw pop 2 div neg 0 rm  col0 sh gr
 % Polyline
 n 2700 3600 m 3900 3600 l 3900 3900 l 2700 3900 l
  cp gs col12 s gr 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3300 3825 m
 gs 1 -1 sc (BlockScope) dup sw pop 2 div neg 0 rm  col0 sh gr
 % Polyline
 n 7800 1500 m 9000 1500 l 9000 1800 l 7800 1800 l
  cp gs col18 s gr 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8400 1725 m
 gs 1 -1 sc (FunctionType) dup sw pop 2 div neg 0 rm  col0 sh gr
 % Ellipse
 n 8100 2550 900 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8100 2625 m
 gs 1 -1 sc (recv: Reference) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Polyline
 n 600 4500 m 1800 4500 l 1800 4800 l 600 4800 l
  cp gs col10 s gr 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1200 4725 m
 gs 1 -1 sc (Variable) dup sw pop 2 div neg 0 rm  col0 sh gr
 % Polyline
@@ -193,7 +189,7 @@ n 9000 8475 m 8850 8550 l
 % Polyline
 n 8400 8550 m
  8850 8550 l gs col10 s gr 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9900 8625 m
 gs 1 -1 sc (MemberFunction) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Polyline
@@ -207,63 +203,51 @@ n 9000 9075 m 8850 9150 l
 % Polyline
 n 8400 9150 m
  8850 9150 l gs col10 s gr 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9900 9225 m
 gs 1 -1 sc (MemberTypeName) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Ellipse
 7.500 slw
 n 7200 4350 300 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 7200 4425 m
 gs 1 -1 sc (cv) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Ellipse
 n 9300 4350 300 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9300 4425 m
 gs 1 -1 sc (cv) dup sw pop 2 div neg 0 rm  col-1 sh gr
-% Ellipse
-n 5100 6150 600 150 0 360 DrawEllipse gs col-1 s gr
-
-/Times-Roman ff 180.00 scf sf
-5100 6225 m
-gs 1 -1 sc (type: Type) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Ellipse
  [60] 0 sd
 n 6900 1950 600 150 0 360 DrawEllipse gs col-1 s gr
  [] 0 sd
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 6900 2025 m
 gs 1 -1 sc (exnSpec?) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Ellipse
 n 6300 1650 1200 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 6300 1725 m
 gs 1 -1 sc (params: FuncParam[]) dup sw pop 2 div neg 0 rm  col-1 sh gr
-% Ellipse
-n 6900 1350 600 150 0 360 DrawEllipse gs col-1 s gr
-
-/Times-Roman ff 180.00 scf sf
-6900 1425 m
-gs 1 -1 sc (ret: Type) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Polyline
 n 7500 7200 m 8700 7200 l 8700 7500 l 7500 7500 l
  cp gs col0 s gr 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8100 7425 m
 gs 1 -1 sc (BaseClass) dup sw pop 2 div neg 0 rm  col0 sh gr
 % Polyline
 n 6900 7800 m 8700 7800 l 8700 8100 l 6900 8100 l
  cp gs col-1 s gr 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 7800 8025 m
 gs 1 -1 sc (VirtualBaseClass) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Ellipse
 n 6900 7350 600 150 0 360 DrawEllipse gs col-1 s gr
 
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 6900 7425 m
 gs 1 -1 sc (access) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Polyline
@@ -276,7 +260,7 @@ n 8100 7500 m
 % Polyline
 7.500 slw
 gs  clippath
-7770 7215 m 7830 7215 l 7830 7064 l 7800 7184 l 7770 7064 l cp
+7770 7064 m 7770 7215 l 7830 7215 l 7830 7064 l 7830 7064 l 7800 7184 l 7770 7064 l cp
 eoclip
 n 7800 6900 m
  7800 7200 l gs col-1 s gr gr
@@ -285,31 +269,31 @@ n 7800 6900 m
 n 7770 7064 m 7800 7184 l 7830 7064 l 7770 7064 l  cp gs 0.00 setgray ef gr  col-1 s
 % Polyline
 gs  clippath
-8130 6885 m 8070 6885 l 8070 7036 l 8100 6916 l 8130 7036 l cp
+8130 7036 m 8130 6885 l 8070 6885 l 8070 7036 l 8070 7036 l 8100 6916 l 8130 7036 l cp
 eoclip
 n 8100 7200 m
  8100 6900 l gs col-1 s gr gr
 
 % arrowhead
 n 8130 7036 m 8100 6916 l 8070 7036 l 8130 7036 l  cp gs 0.00 setgray ef gr  col-1 s
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8175 7125 m
 gs 1 -1 sc (base) col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 7725 7125 m
 gs 1 -1 sc (bases[]) dup sw pop neg 0 rm  col-1 sh gr
 % Polyline
  [60] 0 sd
 n 4500 6900 m 5700 6900 l 5700 7200 l 4500 7200 l
  cp gs col-1 s gr  [] 0 sd
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 5100 7125 m
 gs 1 -1 sc (ClassDefn) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % Arc
 gs  clippath
-3620 873 m 3566 899 l 3633 1035 l 3607 915 l 3687 1009 l cp
+3687 1009 m 3620 873 l 3566 899 l 3633 1035 l 3633 1035 l 3607 915 l 3687 1009 l cp
 eoclip
-n 3300.0 1125.0 375.0 -143.1 -36.9 arcn
+n 3300.0 1125.0 375.0 -143.1301 -36.8699 arcn
 gs col-1 s gr
  gr
 
@@ -346,6 +330,15 @@ n 12000 9300 600 150 0 360 DrawEllipse gs col-1 s gr
 % Ellipse
 n 7050 6450 450 150 0 360 DrawEllipse gs col-1 s gr
 
+% Ellipse
+n 5100 6150 600 150 0 360 DrawEllipse gs col-1 s gr
+
+% Ellipse
+n 6900 1350 600 150 0 360 DrawEllipse gs col-1 s gr
+
+% Ellipse
+n 1800 9450 600 150 0 360 DrawEllipse gs col-1 s gr
+
 % Polyline
 n 2700 600 m 3900 600 l 3900 900 l 2700 900 l
  cp gs col32 s gr 
@@ -371,7 +364,7 @@ n 2100 1950 m
 % Polyline
 7.500 slw
 gs  clippath
-3855 885 m 3795 885 l 3795 1036 l 3825 916 l 3855 1036 l cp
+3855 1036 m 3855 885 l 3795 885 l 3795 1036 l 3795 1036 l 3825 916 l 3855 1036 l cp
 eoclip
 n 3825 1800 m
  3825 900 l gs col-1 s gr gr
@@ -406,7 +399,7 @@ n 600 7800 m 1800 7800 l 1800 8100 l 600 8100 l
  cp gs col0 s gr 
 % Polyline
 gs  clippath
-1170 7815 m 1230 7815 l 1230 7664 l 1200 7784 l 1170 7664 l cp
+1170 7664 m 1170 7815 l 1230 7815 l 1230 7664 l 1230 7664 l 1200 7784 l 1170 7664 l cp
 eoclip
 n 1200 4800 m
  1200 7800 l gs col-1 s gr gr
@@ -415,8 +408,8 @@ n 1200 4800 m
 n 1170 7664 m 1200 7784 l 1230 7664 l 1170 7664 l  cp gs 0.00 setgray ef gr  col-1 s
 % Polyline
 gs  clippath
-1170 4515 m 1230 4515 l 1230 4364 l 1200 4484 l 1170 4364 l cp
-1230 2385 m 1170 2385 l 1170 2536 l 1200 2416 l 1230 2536 l cp
+1170 4364 m 1170 4515 l 1230 4515 l 1230 4364 l 1230 4364 l 1200 4484 l 1170 4364 l cp
+1230 2536 m 1230 2385 l 1170 2385 l 1170 2536 l 1170 2536 l 1200 2416 l 1230 2536 l cp
 eoclip
 n 1200 2400 m
  1200 4500 l gs col-1 s gr gr
@@ -461,7 +454,7 @@ n 10500 3900 m
 % Polyline
 7.500 slw
 gs  clippath
-9180 885 m 9120 885 l 9120 1036 l 9150 916 l 9180 1036 l cp
+9180 1036 m 9180 885 l 9120 885 l 9120 1036 l 9120 1036 l 9150 916 l 9180 1036 l cp
 eoclip
 n 9150 3000 m
  9150 900 l gs col-1 s gr gr
@@ -605,7 +598,7 @@ n 2700 3750 m
 % Polyline
 7.500 slw
 gs  clippath
-1530 4785 m 1470 4785 l 1470 4936 l 1500 4816 l 1530 4936 l cp
+1530 4936 m 1530 4785 l 1470 4785 l 1470 4936 l 1470 4936 l 1500 4816 l 1530 4936 l cp
 eoclip
 n 2700 7125 m 1500 7125 l
  1500 4800 l gs col0 s gr gr
@@ -689,7 +682,7 @@ n 2700 7050 m
 % Polyline
 7.500 slw
 gs  clippath
-8070 6615 m 8130 6615 l 8130 6464 l 8100 6584 l 8070 6464 l cp
+8070 6464 m 8070 6615 l 8130 6615 l 8130 6464 l 8130 6464 l 8100 6584 l 8070 6464 l cp
 eoclip
 n 8100 4200 m
  8100 6600 l gs col-1 s gr gr
@@ -709,7 +702,7 @@ n 10125 5400 m 10200 5250 l 10275 5400 l
 % Polyline
 7.500 slw
 gs  clippath
-10768 4789 m 10810 4831 l 10917 4725 l 10811 4789 l 10874 4682 l cp
+10874 4682 m 10768 4789 l 10810 4831 l 10917 4725 l 10917 4725 l 10811 4789 l 10874 4682 l cp
 eoclip
 n 11250 2700 m 11250 4350 l
  10800 4800 l gs col-1 s gr gr
@@ -735,7 +728,7 @@ n 6000 5700 m 7800 5700 l 7800 6000 l 6000 6000 l
  cp gs col10 s gr 
 % Polyline
 gs  clippath
-7620 6615 m 7680 6615 l 7680 6464 l 7650 6584 l 7620 6464 l cp
+7620 6464 m 7620 6615 l 7680 6615 l 7680 6464 l 7680 6464 l 7650 6584 l 7620 6464 l cp
 eoclip
 n 7650 6000 m
  7650 6600 l gs col-1 s gr gr
@@ -744,16 +737,16 @@ n 7650 6000 m
 n 7620 6464 m 7650 6584 l 7680 6464 l 7620 6464 l  cp gs 0.00 setgray ef gr  col-1 s
 % Polyline
 gs  clippath
-7980 1815 m 7944 1766 l 7822 1857 l 7937 1810 l 7858 1905 l cp
+7859 1906 m 7980 1815 l 7944 1767 l 7823 1858 l 7823 1858 l 7937 1810 l 7859 1906 l cp
 eoclip
 n 3900 2475 m 7050 2475 l
  7950 1800 l gs col-1 s gr gr
 
 % arrowhead
-n 7858 1905 m 7937 1810 l 7822 1857 l 7858 1905 l  cp gs 0.00 setgray ef gr  col-1 s
+n 7859 1906 m 7937 1810 l 7823 1858 l 7859 1906 l  cp gs 0.00 setgray ef gr  col-1 s
 % Polyline
 gs  clippath
-4620 3015 m 4680 3015 l 4680 2864 l 4650 2984 l 4620 2864 l cp
+4620 2864 m 4620 3015 l 4680 3015 l 4680 2864 l 4680 2864 l 4650 2984 l 4620 2864 l cp
 eoclip
 n 3900 2625 m 4650 2625 l
  4650 3000 l gs col-1 s gr gr
@@ -826,7 +819,7 @@ n 12600 7200 m
 % Polyline
 7.500 slw
 gs  clippath
-9870 7215 m 9930 7215 l 9930 7064 l 9900 7184 l 9870 7064 l cp
+9870 7064 m 9870 7215 l 9930 7215 l 9930 7064 l 9930 7064 l 9900 7184 l 9870 7064 l cp
 eoclip
 n 9900 6900 m
  9900 7200 l gs col-1 s gr gr
@@ -852,7 +845,7 @@ n 6600 6600 m 9000 6600 l 9000 6900 l 6600 6900 l
  cp gs col34 s gr 
 % Polyline
 gs  clippath
-9420 8415 m 9480 8415 l 9480 8264 l 9450 8384 l 9420 8264 l cp
+9420 8264 m 9420 8415 l 9480 8415 l 9480 8264 l 9480 8264 l 9450 8384 l 9420 8264 l cp
 eoclip
 n 9000 6750 m 9450 7200 l
  9450 8400 l gs col-1 s gr gr
@@ -861,7 +854,7 @@ n 9000 6750 m 9450 7200 l
 n 9420 8264 m 9450 8384 l 9480 8264 l 9420 8264 l  cp gs 0.00 setgray ef gr  col-1 s
 % Polyline
 gs  clippath
-9120 8415 m 9180 8415 l 9180 8264 l 9150 8384 l 9120 8264 l cp
+9120 8264 m 9120 8415 l 9180 8415 l 9180 8264 l 9180 8264 l 9150 8384 l 9120 8264 l cp
 eoclip
 n 8850 6900 m 9150 7200 l
  9150 8400 l gs col-1 s gr gr
@@ -870,251 +863,262 @@ n 8850 6900 m 9150 7200 l
 n 9120 8264 m 9150 8384 l 9180 8264 l 9120 8264 l  cp gs 0.00 setgray ef gr  col-1 s
 % Polyline
 gs  clippath
-5685 7020 m 5685 7080 l 5836 7080 l 5716 7050 l 5836 7020 l cp
+5836 7020 m 5685 7020 l 5685 7080 l 5836 7080 l 5836 7080 l 5716 7050 l 5836 7020 l cp
 eoclip
 n 6600 6900 m 6450 7050 l
  5700 7050 l gs col-1 s gr gr
 
 % arrowhead
 n 5836 7020 m 5716 7050 l 5836 7080 l 5836 7020 l  cp gs 0.00 setgray ef gr  col-1 s
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3300 825 m
 gs 1 -1 sc (Namespace) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 10800 1725 m
 gs 1 -1 sc (DataType) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
-9600 825 m
-gs 1 -1 sc (Type) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3300 1350 m
 gs 1 -1 sc (using*) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3900 1725 m
 gs 1 -1 sc (target) col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 5100 825 m
 gs 1 -1 sc (GlobalScope) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3900 9525 m
 gs 1 -1 sc (HandlerParam) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3900 8625 m
 gs 1 -1 sc (GlobalVar) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3900 8325 m
 gs 1 -1 sc (LocalVar) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1800 8625 m
 gs 1 -1 sc (Identifier) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1800 8925 m
 gs 1 -1 sc (Operator) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1800 9225 m
 gs 1 -1 sc (Conversion) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1200 8025 m
 gs 1 -1 sc (Name) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1275 2625 m
 gs 1 -1 sc (members*) col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1275 4425 m
 gs 1 -1 sc (scope) col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3300 2625 m
 gs 1 -1 sc (Function) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 5100 3225 m
 gs 1 -1 sc (FunctionDefn) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8400 2325 m
 gs 1 -1 sc (MethodType) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 10500 4125 m
 gs 1 -1 sc (Reference) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 4125 m
 gs 1 -1 sc (Array) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9600 3225 m
 gs 1 -1 sc (IndirectionType) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 11325 2925 m
 gs 1 -1 sc (atomic) col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9075 2925 m
 gs 1 -1 sc (referent) dup sw pop neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 5700 9375 m
 gs 1 -1 sc (NonstaticDM) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 5700 9075 m
 gs 1 -1 sc (StaticDM) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3900 8925 m
 gs 1 -1 sc (FuncParam) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3900 9225 m
 gs 1 -1 sc (DataMember) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 4650 8325 m
 gs 1 -1 sc (i?) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 4650 8625 m
 gs 1 -1 sc (i?) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 4650 8925 m
 gs 1 -1 sc (d?) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 6450 9075 m
 gs 1 -1 sc (i?) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 270.00 scf sf
+/Times-Roman ff 300.00 scf sf
 7350 825 m
 gs 1 -1 sc (C++ Static Semantics) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 2550 8625 m
 gs 1 -1 sc (id) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 2550 8925 m
 gs 1 -1 sc (op) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 11700 2625 m
 gs 1 -1 sc (CVAtomicType) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3300 4425 m
 gs 1 -1 sc (Enumerator) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3600 5325 m
 gs 1 -1 sc (PrototypeScope) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3300 7725 m
 gs 1 -1 sc (DataVariable) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 7350 1050 m
 gs 1 -1 sc (\(without templates\)) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 1125 5025 m
 gs 1 -1 sc (name?) dup sw pop neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9900 8925 m
 gs 1 -1 sc (MemberUsingAlias) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 10200 6825 m
 gs 1 -1 sc (Enumeration) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 6900 5025 m
 gs 1 -1 sc (TypeName) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9300 5925 m
 gs 1 -1 sc (NamedAtomicType) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 6900 4125 m
 gs 1 -1 sc (Pointer) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8700 4125 m
 gs 1 -1 sc (PointerToMember) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3300 7125 m
 gs 1 -1 sc (UsingAlias) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 2625 7275 m
 gs 1 -1 sc (target) dup sw pop neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8175 4425 m
 gs 1 -1 sc (class) col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 10200 5025 m
 gs 1 -1 sc (AtomicType) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 5025 m
 gs 1 -1 sc (size: int) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 4725 m
 gs 1 -1 sc (SizedArray) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 5100 5925 m
 gs 1 -1 sc (Typedef) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 6900 5925 m
 gs 1 -1 sc (InjectedClassName) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 7575 6225 m
 gs 1 -1 sc (self) dup sw pop neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 4200 2400 m
 gs 1 -1 sc (type) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 4725 2775 m
 gs 1 -1 sc (defn?) col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8250 8625 m
 gs 1 -1 sc (\(Function\)) dup sw pop neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8250 8925 m
 gs 1 -1 sc (\(UsingAlias\)) dup sw pop neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 8250 9225 m
 gs 1 -1 sc (\(TypeName\)) dup sw pop neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 10650 9525 m
 gs 1 -1 sc (\(DataMember\)) dup sw pop neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 8325 m
 gs 1 -1 sc (\(Variable\)) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 11700 5925 m
 gs 1 -1 sc (FundamentalType) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 6525 m
 gs 1 -1 sc (char) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 7725 m
 gs 1 -1 sc (void) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 7125 m
 gs 1 -1 sc (float) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 6825 m
 gs 1 -1 sc (...) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 7425 m
 gs 1 -1 sc (...) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9975 7125 m
 gs 1 -1 sc (enumerators*) col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 3600 2025 m
 gs 1 -1 sc (NamespaceAlias) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 9075 m
 gs 1 -1 sc (ClassMember) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 12000 9375 m
 gs 1 -1 sc (access) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 10800 8175 m
 gs 1 -1 sc (ImplicitMF) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 7800 6825 m
 gs 1 -1 sc (ClassType) dup sw pop 2 div neg 0 rm  col0 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 7050 6525 m
 gs 1 -1 sc (keyword) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 10200 7425 m
 gs 1 -1 sc (\(Enumerator\)) dup sw pop 2 div neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9075 7725 m
 gs 1 -1 sc (dtor?) dup sw pop neg 0 rm  col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 9525 7725 m
 gs 1 -1 sc (ctor*) col-1 sh gr
-/Times-Roman ff 180.00 scf sf
+/Times-Roman ff 200.00 scf sf
 6450 6975 m
 gs 1 -1 sc (defn?) dup sw pop neg 0 rm  col-1 sh gr
+/Times-Roman ff 200.00 scf sf
+9600 825 m
+gs 1 -1 sc (CType) dup sw pop 2 div neg 0 rm  col0 sh gr
+/Times-Roman ff 200.00 scf sf
+5100 6225 m
+gs 1 -1 sc (type: CType) dup sw pop 2 div neg 0 rm  col-1 sh gr
+/Times-Roman ff 200.00 scf sf
+6900 1425 m
+gs 1 -1 sc (ret: CType) dup sw pop 2 div neg 0 rm  col-1 sh gr
+/Times-Roman ff 200.00 scf sf
+1800 9525 m
+gs 1 -1 sc (type: CType) dup sw pop 2 div neg 0 rm  col-1 sh gr
 % here ends figure;
 $F2psEnd
 rs
 showpage
+%%Trailer
+%EOF
