@@ -1,3 +1,7 @@
+This file contains a list of all documented and undocumented
+tracingoptions that might have an effect on ccparse. 
+Generated by grep -r "tracingSys" ../..
+
 ansi
 ansi_c
 ansi_c99
