@@ -1,3 +1,7 @@
+2006-08-28  Hendrik Tews  <tews@tandem.cs.ru.nl>
+
+	* checked added/deleted files in the snapshot
+
 2006-08-24  Hendrik Tews  <tews@debian>
 
 	* develop snapshot script
